build: remove some unused import